--- a/Contact.html
+++ b/Contact.html
@@ -17,7 +17,7 @@
             width: 100%;
             height: 65vh;
             min-height: 380px;
-            background-image: url("gambarUAS/hr.jpeg");
+            background-image: url("hr.jpeg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -504,3 +504,4 @@
 
 </body>
 </html>
+
