--- a/Gallery.html
+++ b/Gallery.html
@@ -16,7 +16,7 @@
             width: 100%;
             height: 65vh;
             min-height: 380px;
-            background-image: url("gambarUAS/gl.jpg");
+            background-image: url("gl.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -412,11 +412,11 @@
 
     <div class="carousel">
     <div class="slides">
-        <img src="gambarUAS/crm.jpg">
-        <img src="gambarUAS/jati.jpg">
-        <img src="gambarUAS/hurip.jpg">
-        <img src="gambarUAS/darma.jpg">
-        <img src="gambarUAS/biru.jpg">
+        <img src="crm.jpg">
+        <img src="jati.jpg">
+        <img src="hurip.jpg">
+        <img src="darma.jpg">
+        <img src="biru.jpg">
     </div>
 
     <div class="caption">
@@ -474,3 +474,4 @@
 
 </body>
 </html>
+
