--- a/Profile.html
+++ b/Profile.html
@@ -17,7 +17,7 @@
             width: 100%;
             height: 65vh;
             min-height: 380px;
-            background-image: url("gambarUAS/br.jpeg");
+            background-image: url("br.jpeg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -423,7 +423,7 @@
     <div class="cards">
 
         <div class="card">
-            <img src="gambarUAS/gn.jpg">
+            <img src="gn.jpg">
             <div class="card-content">
                 <h3>Gunung Ciremai</h3>
                 <p>
@@ -434,7 +434,7 @@
         </div>
 
         <div class="card">
-            <img src="gambarUAS/gd.jpg">
+            <img src="gd.jpg">
             <div class="card-content">
                 <h3>Linggarjati</h3>
                 <p>
@@ -445,7 +445,7 @@
         </div>
 
         <div class="card">
-            <img src="gambarUAS/km.jpeg">
+            <img src="km.jpeg">
             <div class="card-content">
                 <h3>Sangkanhurip</h3>
                 <p>
@@ -456,7 +456,7 @@
         </div>
 
         <div class="card">
-            <img src="gambarUAS/wd.jpg">
+            <img src="wd.jpg">
             <div class="card-content">
                 <h3>Waduk Darma</h3>
                 <p>
@@ -467,7 +467,7 @@
         </div>
 
         <div class="card">
-            <img src="gambarUAS/tb.jpeg">
+            <img src="tb.jpeg">
             <div class="card-content">
                 <h3>Talaga Biru Cicerem</h3>
                 <p>
@@ -495,3 +495,4 @@
 
 </body>
 </html>
+
