--- a/Contact.html
+++ b/Contact.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Wisata Kabupaten Kuningan</title>
+
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="header.css">
+
     <style>
-        body {
+        * {
             margin: 0;
-            font-family: 'Segoe UI', Tahoma, sans-serif;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Segoe UI", sans-serif;
+        }
+
+        body {
             background: linear-gradient(to bottom, #eef7ee, #ffffff);
             color: #333;
         }
 
+        /* ===== HEADER ===== */
         .header {
             position: relative;
             width: 100%;
@@ -20,12 +30,9 @@
             background-image: url("hr.jpeg");
             background-size: cover;
             background-position: center;
-            background-repeat: no-repeat;
-
             display: flex;
             align-items: center;
             justify-content: center;
-            overflow: hidden;
         }
 
         .header::before {
@@ -33,50 +40,19 @@
             position: absolute;
             inset: 0;
             background: linear-gradient(
-            to bottom,
-            rgba(0, 0, 0, 0.55),
-            rgba(0, 0, 0, 0.75)
+                to bottom,
+                rgba(0, 0, 0, 0.55),
+                rgba(0, 0, 0, 0.75)
             );
-            z-index: 1;
         }
 
         .header-content {
             position: relative;
-            z-index: 2;
-            text-align: center;
-            color: #ffffff;
-            padding: 20px;
-            max-width: 900px;
-            animation: fadeUp 1.2s ease;
-        }
-
-        .header-content h1 {
-            font-size: 3rem;
-            margin-bottom: 15px;
-            letter-spacing: 1px;
-        }
-
-        .header-content p {
-            font-size: 1.1rem;
-            line-height: 1.8;
-            opacity: 0.95;
-        }
-
-        .header-btn {
-            display: inline-block;
-            margin-top: 25px;
-            padding: 12px 30px;
-            border-radius: 50px;
-            background-color: #2e7d32;
             color: white;
-            text-decoration: none;
-            font-weight: 600;
-            transition: all 0.3s ease;
-        }
-
-        .header-btn:hover {
-            background-color: #1b5e20;
-            transform: translateY(-3px);
+            text-align: center;
+            max-width: 900px;
+            padding: 20px;
+            animation: fadeUp 1.2s ease;
         }
 
         @keyframes fadeUp {
@@ -90,42 +66,7 @@
             }
         }
 
-        @media (max-width: 992px) {
-            .header {
-                height: 55vh;
-            }
-
-            .header-content h1 {
-                font-size: 2.4rem;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .header {
-                height: 50vh;
-                min-height: 300px;
-            }
-
-            .header-content h1 {
-                font-size: 2rem;
-            }
-
-            .header-content p {
-                font-size: 0.95rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .header-content h1 {
-                font-size: 1.6rem;
-            }
-
-            .header-btn {
-                padding: 10px 22px;
-                font-size: 14px;
-            }
-        }
-
+        /* ===== CONTENT ===== */
         .container {
             padding: 50px 10%;
         }
@@ -135,46 +76,19 @@
             margin-bottom: 40px;
         }
 
-        .intro h2 {
-            color: #2e7d32;
-            margin-bottom: 10px;
-        }
-
-        .intro p {
-            line-height: 1.8;
-            color: #555;
-        }
-
         .content {
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 40px;
         }
 
-        @media(max-width: 900px) {
+        @media (max-width: 900px) {
             .content {
                 grid-template-columns: 1fr;
             }
         }
 
-        .info {
-            background: white;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 8px 15px rgba(0,0,0,0.15);
-        }
-
-        .info h3 {
-            color: #1b5e20;
-            margin-bottom: 15px;
-        }
-
-        .info p {
-            font-size: 14px;
-            line-height: 1.7;
-            margin-bottom: 15px;
-        }
-
+        .info,
         .form {
             background: white;
             padding: 30px;
@@ -182,18 +96,13 @@
             box-shadow: 0 8px 15px rgba(0,0,0,0.15);
         }
 
-        .form h3 {
-            color: #1b5e20;
-            margin-bottom: 20px;
-        }
-
-        .form input, .form textarea {
+        .form input,
+        .form textarea {
             width: 100%;
             padding: 12px;
             margin-bottom: 15px;
             border-radius: 8px;
             border: 1px solid #ccc;
-            font-size: 14px;
         }
 
         .form button {
@@ -203,32 +112,10 @@
             color: white;
             border: none;
             border-radius: 30px;
-            font-size: 16px;
             cursor: pointer;
-            transition: background 0.3s;
         }
 
-        .form button:hover {
-            background-color: #1b5e20;
-        }
-
-        footer {
-            margin-top: 10px;
-            background-color: #1b5e20;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            border-bottom-left-radius: 50px;
-            border-top-right-radius: 50px;
-        }
-      
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Segoe UI", sans-serif;
-        }
-
+        /* ===== NAVBAR ===== */
         .navbar {
             position: fixed;
             top: 0;
@@ -237,22 +124,13 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            z-index: 1000;
-
             background: transparent;
-            transition: 0.4s ease;
+            transition: 0.4s;
+            z-index: 1000;
         }
 
         .navbar.scrolled {
-            background: rgba(0, 0, 0, 0.9);
-            box-shadow: 0 4px 10px rgba(0,0,0,0.4);
-        }
-
-        .nav-logo {
-            font-size: 1.6rem;
-            font-weight: 700;
-            color: #ffffff;
-            text-decoration: none;
+            background: rgba(0,0,0,0.9);
         }
 
         .nav-menu {
@@ -261,119 +139,31 @@
             gap: 30px;
         }
 
-        .nav-menu li {
-            position: relative;
-        }
-
         .nav-menu a {
+            color: white;
             text-decoration: none;
-            color: #ffffff;
-            font-size: 1rem;
-            font-weight: 500;
-            transition: 0.3s;
         }
 
-        .nav-menu a:hover {
+        .active {
             color: #4caf50;
+            font-weight: bold;
         }
 
-        .dropdown {
-            display: none;
-            position: absolute;
-            top: 40px;
-            left: 0;
-            background: rgba(0,0,0,0.9);
-            border-radius: 6px;
-            min-width: 200px;
+        footer {
+            background-color: #1b5e20;
+            color: white;
+            text-align: center;
+            padding: 12px;
+            margin-top: 20px;
+            border-bottom-left-radius: 50px;
+            border-top-right-radius: 50px;
         }
-
-        .dropdown a {
-            display: block;
-            padding: 12px 16px;
-            font-size: 0.95rem;
-        }
-
-        .nav-menu li:hover .dropdown {
-            display: block;
-        }
-
-        .nav-toggle {
-            display: none;
-            font-size: 1.8rem;
-            color: #ffffff;
-            cursor: pointer;
-        }
-
-
-        @media (max-width: 768px) {
-            .navbar {
-            padding: 14px 24px;
-            }
-
-            .nav-toggle {
-            display: block;
-            }
-
-        .nav-menu {
-            position: absolute;
-            top: 70px;
-            right: 0;
-            width: 100%;
-            height: 0;
-            overflow: hidden;
-
-            flex-direction: column;
-            align-items: center;
-            background: rgba(0,0,0,0.95);
-            transition: height 0.4s ease;
-        }
-
-        .nav-menu.active {
-            height: 300px;
-            padding-top: 20px;
-        }
-
-        .nav-menu li:hover .dropdown {
-            display: none;
-        }
-
-        .dropdown {
-            position: static;
-            background: none;
-        }
-        }
-
-        .nav-left {
-            display: flex;
-            align-items: center;
-            gap: 14px;
-        }
-
-        .nav-clock {
-            color: #4caf50;
-            font-size: 0.95rem;
-            font-weight: 600;
-            padding: 4px 10px;
-            border-radius: 6px;
-            background: rgba(0, 0, 0, 0.4);
-            letter-spacing: 1px;
-        }
-        
-        @media (max-width: 768px) {
-            .nav-clock {
-                font-size: 0.85rem;
-            }
-        }
-
-
     </style>
 </head>
 
 <body>
 
-    <link rel="stylesheet" href="nav.css">
-
-    <nav class="navbar" id="navbar">
+<nav class="navbar" id="navbar">
     <div class="nav-left">
         <span class="nav-logo">Kuningan</span>
         <span class="nav-clock" id="clock">00:00:00</span>
@@ -387,121 +177,27 @@
         <li><a href="Gallery.html">Gallery</a></li>
         <li><a href="Contact.html" class="active">Contact</a></li>
     </ul>
-    </nav>
+</nav>
 
-    <script>
-    function updateClock() {
-    const now = new Date();
-    let hours = now.getHours().toString().padStart(2, '0');
-    let minutes = now.getMinutes().toString().padStart(2, '0');
-    let seconds = now.getSeconds().toString().padStart(2, '0');
+<header class="header">
+    <div class="header-content">
+        <h1>Hubungi Kami</h1>
+        <p>Kami siap membantu perjalanan wisatamu di Kabupaten Kuningan.</p>
+    </div>
+</header>
 
-    document.getElementById("clock").innerText =
-        hours + ":" + minutes + ":" + seconds;
-    }
+<div class="container">
+    <div class="intro">
+        <h2>Mari Terhubung dengan Kuningan</h2>
+        <p>Dari Gunung Ciremai hingga Talaga Biru Cicerem.</p>
+    </div>
 
-    setInterval(updateClock, 1000);
-    updateClock();
-
-    function toggleMenu() {
-    document.getElementById("navMenu").classList.toggle("active");
-    }
-
-    function closeMenu() {
-    document.getElementById("navMenu").classList.remove("active");
-    }
-
-    window.addEventListener("scroll", function () {
-    document.getElementById("navbar")
-        .classList.toggle("scrolled", window.scrollY > 50);
-    });
-    </script>
-
-
-
-    <link rel="stylesheet" href="header.css">
-
-    <header class="header">
-        <div class="header-content">
-            <h1>Hubungi Kami</h1>
-            <p>
-            Kami siap membantu perjalanan wisatamu menjelajahi
-            Gunung Ciremai, Linggarjati, Sangkanhurip,
-            Waduk Darma, dan Talaga Biru Cicerem
-            di Kabupaten Kuningan.
-            </p>
-        </div>
-    </header>
-
-    <div class="container">
-        <div class="intro">
-            <h2>Mari Terhubung dengan Kuningan</h2>
-            <p>
-            Dari megahnya <b>Gunung Ciremai</b>, sejarah <b>Linggarjati</b>,
-            relaksasi <b>Sangkanhurip</b>, ketenangan <b>Waduk Darma</b>,
-            hingga jernihnya <b>Talaga Biru Cicerem</b>,
-            kami siap menemani perjalanan wisatamu.
-            </p>
-        </div>
     <div class="content">
-
-    <div class="info">
-        <h3>Informasi Kontak</h3>
-            <p>
-                📍 Kabupaten Kuningan, Jawa Barat  
-            </p>
-            <p>
-                📧 Email: wisata@kuningan.go.id  
-            </p>
-            <p>
-                📞 Telepon: (0232) 123456  
-            </p>
-            <p>
-                Jangan ragu menghubungi kami untuk informasi wisata,
-                rekomendasi destinasi, atau rencana liburan terbaikmu.
-        </p>
-    </div>
-
-        <div class="form">
-            <h3>Kirim Pesan</h3>
-
-            <input type="text" id="nama" placeholder="Nama Lengkap">
-            <input type="email" id="email" placeholder="Email">
-            <textarea id="pesan" rows="5" placeholder="Tulis pesan Anda..."></textarea>
-
-            <button onclick="kirimPesan()">Kirim Pesan</button>
+        <div class="info">
+            <h3>Informasi Kontak</h3>
+            <p>📍 Kabupaten Kuningan, Jawa Barat</p>
+            <p>📧 wisata@kuningan.go.id</p>
+            <p>📞 (0232) 123456</p>
         </div>
 
-    </div>
-
-</div>
-
-<!-- Footer -->
-<footer>
-    <p>✨ Wisata Kabupaten Kuningan – Alam, Sejarah, dan Harmoni ✨</p>
-</footer>
-
-<script>
-    function kirimPesan() {
-        let nama = document.getElementById("nama").value;
-        let email = document.getElementById("email").value;
-        let pesan = document.getElementById("pesan").value;
-
-        if (nama === "" || email === "" || pesan === "") {
-            alert("Mohon lengkapi semua data sebelum mengirim pesan.");
-        } else {
-            alert(
-                "Terima kasih, " + nama +
-                "! 🌿\nPesan Anda telah kami terima.\nSampai jumpa di Kabupaten Kuningan!"
-            );
-
-            document.getElementById("nama").value = "";
-            document.getElementById("email").value = "";
-            document.getElementById("pesan").value = "";
-        }
-    }
-</script>
-
-</body>
-</html>
-
+        <div class="fo
